fix(table:sorting): fixed width on icon to prevent content jump (#203)

--- a/core/src/components/table/table-header-cell/table-header-cell.scss
+++ b/core/src/components/table/table-header-cell/table-header-cell.scss
@@ -59,6 +59,7 @@
       /* not to shrink on lot of text */
       flex: 0 0 16px;
       height: 16px;
+      width: 16px;
       opacity: 0;
       transform-origin: center;
       transition: opacity 200ms ease-in, transform 200ms ease;
